exchange-rate-app/src/objects/Exchange_Rate__c.object
<CustomObject>
    <fields>
        <fullName>Base_Currency__c</fullName>
        <label>Base Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GBP</fullName>
                    <default>true</default>
                    <label>GBP</label>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>SCD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAD__c</fullName>
        <inlineHelpText>Canada Dollar (C$)</inlineHelpText>
        <label>CAD</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR__c</fullName>
        <inlineHelpText>Euro (€)</inlineHelpText>
        <label>EUR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GBP__c</fullName>
        <inlineHelpText>British Pound(£)</inlineHelpText>
        <label>GBP</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Log</label>
        <referenceTo>Log__c</referenceTo>
        <relationshipLabel>Exchande Rates</relationshipLabel>
        <relationshipName>Exchande_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCD__c</fullName>
        <label>SCD</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>USD__c</fullName>
        <inlineHelpText>Unated State Dollar ($)</inlineHelpText>
        <label>USD</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <label>Exchange Rate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Exchange Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exchande Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>